<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item android:id="@+id/nav_notification" android:icon="@drawable/ic_notifications_black_36dp"
            android:title="@string/notification" />
        <item android:id="@+id/nav_send_message" android:icon="@drawable/ic_message_black_36dp"
            android:title="@string/send_message" />
        <item android:id="@+id/nav_profile" android:icon="@drawable/ic_person_black_36dp"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item android:id="@+id/nav_help" android:icon="@drawable/ic_info_black_36dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>